--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2021"
 rayon = "1.5.1"
 v8 = "0.63.0"
 regex = "1.5.4"
+threadpool = "1.8.1"
+num_cpus = "1.13.0"
+tokio = { version = "1.10.0", features = ["full"] }
